# ECHPlay

./: android_ijk_like_player_plan.txt
android/: .gitignore  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/example/abcplaydemo/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  NativePlayer.cpp  NativePlayer.h  native-lib.cpp
android/app/src/main/java/com/example/abcplaydemo/: MainActivity.java
android/app/src/main/java/com/example/abcplaydemo/player/: ECHPlayer.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/example/abcplaydemo/: ExampleUnitTest.java
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/tools/: build_ffmpeg_android_arm64.sh
